# Gear

./: .gitignore  README.md  pyproject.toml
environments/cpu/: docker-compose.yaml  sample-variables.env
src/gondola/: carrier.py  models.py  renderer.py
src/gondola/scripts/: send_gmail.py
src/gondola/templates/: advent_calendar_contribution_request.jinja2  advent_calendar_contribution_request_2022.jinja2
tests/src/gondola/: conftest.py  test_renderer.py
