[tool.poetry]
name = "gear"
version = "0.1.0"
description = "A useful set of tools (=gears) for organization operations."
license = "MIT"
authors = ["cvpaper.challenge XCCV group"]
maintainers = ["yoshihiro fukuhara <gatheluck@gmail.com>"]
readme = "README.md"
keywords = [
    "gear",
    "Python",
]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.2"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^3.0.0"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.950"
mdformat-gfm = "^0.3.5"
mdformat_frontmatter = "^0.4.1"
mdformat_footnote = "^0.1.1"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = 3.8
# following setting is same as pysen
# https://github.com/pfnet/pysen/blob/main/setup.cfg#L12
check_untyped_defs = true
disallow_any_decorated = false
disallow_any_generics = false
disallow_any_unimported = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
